gave sidebar variable width

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,7 +45,7 @@ a {
   position: fixed;
   top: 0;
   right: 0;
-  width: 900px;
+  width: 100%;
   height: calc(100% - 20px); /* Adjusted height */
   background: #fff;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
