--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,7 +53,7 @@ a {
   transform: translateX(100%);
   transition: transform 0.3s ease-in-out;
   z-index: 1001;
-  overflow-y: auto; /* Allow scrolling */
+  overflow-y: scroll; /* Allow scrolling */
   color: black;
 }
 
