--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,7 +46,7 @@ a {
   top: 0;
   right: 0;
   width: 100%;
-  height: calc(100% - 20px); /* Adjusted height */
+  height: 100%;
   background: #fff;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
   padding: 20px;
